# convertool

./: .gitmodules  CMakeLists.txt  README.md  ages.inc  main.cpp  tooltools.hpp
input/: agestructure.ods  export_modely_popis.xlsx  men.ods  readme.md  vakciny_ciselnik.xlsx  women.ods
